--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/JepriAlber/portofolio-simple-tailwind#readme",
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.13",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.13"
   }
 }
